--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -123,7 +123,11 @@
   }
 </style>
 
-
+{% assign variants = 0 %}
+{% for option in product.options %}
+{% if product.options.first != 'Title' %}
+{% endif %}
+{% endfor %}
 
 <script>
   //Produt functions
