--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,11 +1,3 @@
-
-{% for link in settings.collection_list_menu %}
-  {% if link.type == 'collection_link' %}
-    {% assign collection = link.object %}
-    <div id="products">
-      {% for product in collection.products %}
-    		{% include 'product-body' %}
-      {% endfor %}
-    </div>
-  {% endif %}
+{% for product in collections.all.products %}
+{% include 'product-body' %}
 {% endfor %}
