--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,3 +1,6 @@
-{% for product in collections.all.products %}
-{% include 'product-body' %}
-{% endfor %}
+
+<div id="products">
+  {% for product in collections.all.products %}
+    {% include 'product-body' %}
+  {% endfor %}
+</div>
