--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -1,54 +1,27 @@
 <!--Product-->
 <div class="product">
     <a class="thumbnail" href="{{ product.url }}">
-    <span class="box"></span>
-    <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
-          {%- if product.has_only_default_variant -%}
-            class="product-simple"
-          {%- elsif variants > 1 -%}
-            class="product-variants"
-          {%- endif -%}>
-          {% if product.compare_at_price > product.price %}
-            <div class="sale">ON SALE</div>
-          {% else %}
-          {% endif %}
-          {% if product.available %}
-          {% else %}
-            <div class="sold-out">SOLD OUT</div>
-            <div class="layer"></div>
-          {% endif %}
-    </form>
-    {% for media in product.media %}
-        {% case media.media_type %}
-              {% when 'video' %}
-                <div  class="product-video">
-                      {{ media | video_tag:loop: true, autoplay: true, muted:true}}
-                </div>
-        {% endcase %}
-    {% endfor %}
-    <img class="lazy" src="{{ product.images[0] | product_img_url: 'thumb' }}" data-src="{{ product.images[0] | product_img_url: 'master' }}" alt="{{ product.title }}" />
-    <img class="lazy none" src="{{ product.images[1] | product_img_url: 'thumb' }}" data-src="{{ product.images[1] | product_img_url: 'master' }}" alt="{{ product.title }}" />
+      <div class="box"></div>
+      <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
+            {%- if product.has_only_default_variant -%}
+              class="product-simple"
+            {%- elsif variants > 1 -%}
+              class="product-variants"
+            {%- endif -%}>
+            {% if product.compare_at_price > product.price %}
+              <div class="sale">ON SALE</div>
+            {% else %}
+            {% endif %}
+            {% if product.available %}
+            {% else %}
+              <div class="sold-out">SOLD OUT</div>
+              <div class="layer"></div>
+            {% endif %}
+      </form>
+      <img class="lazy" src="{{ product.images[0] | product_img_url: 'thumb' }}" data-src="{{ product.images[0] | product_img_url: 'master' }}" alt="{{ product.title }}" />
+      <img class="lazy none" src="{{ product.images[1] | product_img_url: 'thumb' }}" data-src="{{ product.images[1] | product_img_url: 'master' }}" alt="{{ product.title }}" />
     </a>
     <div class="product-info">
-        <div class="product-price-wrap">
-              {% if product.available %}
-                    {% if product.price_varies %}
-                      {% else %}
-                       {% if product.compare_at_price > product.price %}
-                        {% else %}
-                        {% endif %}
-                      {% endif %}
-                  {% else %}
-              {% endif %}
-
-              {% assign date_created = product.created_at | date:'%d' %}
-              {% assign     date_now = 'now' | date:'%d' %}
-              {% assign   difference = date_now | plus: date_created %}
-
-              {% if difference < 5 %}
-
-              {% endif %}
-        </div>
         <div class="row">
           <div class="main-information">
             <div class="info-product">
