--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -70,7 +70,7 @@
   var selectCallback = function(variant, selector){
     if(variant){
       if(variant.available){
-        jQuery('#add-to-cart').prop('disabled', false).text('ADD TO BAG');
+        jQuery('#add-to-cart').prop('disabled', false).text('ADD TO CART');
       }else{
         jQuery('#add-to-cart').prop('disabled', true).text('OUT OF STOCK');
       }
@@ -82,7 +82,7 @@
       }
     }else{
       jQuery('#product-price').empty();
-      jQuery('#add-to-cart').prop('disabled', true).text('ADD TO BAG');
+      jQuery('#add-to-cart').prop('disabled', true).text('ADD TO CART');
       {% if product.price_varies %}
         jQuery('#product-price').html('{{ product.price_min | money }} – {{ product.price_max | money }}' );
       {% else %}
@@ -90,18 +90,18 @@
       {% endif %}
     }
   };
-  //Replace default variant selector
-  jQuery(function($) {
-    new Shopify.OptionSelectors('product-select', {
-      product: {{ product | json }},
-      onVariantSelected: selectCallback
-    });
-    {% assign count = -1 %}
-    {% for option in product.options %}
-    {% if product.options.first != 'Title' %}
-      {% assign count = count | plus: 1 %}
-      $("#product-select-option-{{ count }}").prepend("<option value='' disabled selected>{{ product.options[count] | upcase }}</option>");
-    {% endif %}
-    {% endfor %}
-  });
+  // //Replace default variant selector
+  // jQuery(function($) {
+  //   new Shopify.OptionSelectors('product-select', {
+  //     product: {{ product | json }},
+  //     onVariantSelected: selectCallback
+  //   });
+  //   {% assign count = -1 %}
+  //   {% for option in product.options %}
+  //   {% if product.options.first != 'Title' %}
+  //     {% assign count = count | plus: 1 %}
+  //     $("#product-select-option-{{ count }}").prepend("<option value='' disabled selected>{{ product.options[count] | upcase }}</option>");
+  //   {% endif %}
+  //   {% endfor %}
+  // });
 </script>
