--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -154,18 +154,18 @@
       {% endif %}
     }
   };
-  //Replace default variant selector
-  jQuery(function($) {
-    new Shopify.OptionSelectors('product-select', {
-      product: {{ product | json }},
-      onVariantSelected: selectCallback
-    });
-    {% assign count = -1 %}
-    {% for option in product.options %}
-    {% if product.options.first != 'Title' %}
-      {% assign count = count | plus: 1 %}
-      $("#product-select-option-{{ count }}").prepend("<option value='' disabled selected>{{ product.options[count] | upcase }}</option>");
-    {% endif %}
-    {% endfor %}
-  });
+  // //Replace default variant selector
+  // jQuery(function($) {
+  //   new Shopify.OptionSelectors('product-select', {
+  //     product: {{ product | json }},
+  //     onVariantSelected: selectCallback
+  //   });
+  //   {% assign count = -1 %}
+  //   {% for option in product.options %}
+  //   {% if product.options.first != 'Title' %}
+  //     {% assign count = count | plus: 1 %}
+  //     $("#product-select-option-{{ count }}").prepend("<option value='' disabled selected>{{ product.options[count] | upcase }}</option>");
+  //   {% endif %}
+  //   {% endfor %}
+  // });
 </script>
