--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -123,11 +123,11 @@
   }
 </style>
 
-{% assign variants = 0 %}
+<!-- {% assign variants = 0 %}
 {% for option in product.options %}
 {% if product.options.first != 'Title' %}
 {% endif %}
-{% endfor %}
+{% endfor %} -->
 
 <script>
   //Produt functions
