--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -131,29 +131,29 @@
 
 <script>
   //Produt functions
-  var selectCallback = function(variant, selector){
-    if(variant){
-      if(variant.available){
-        jQuery('#add-to-cart').prop('disabled', false).text('ADD TO CART');
-      }else{
-        jQuery('#add-to-cart').prop('disabled', true).text('SOLD OUT');
-      }
-      if( variant.compare_at_price > variant.price ) {
-        {% if variant.price < variant.compare_at_price %} {{ variant.compare_at_price | money }}{% endif %}
-        jQuery('#product-price').html(Shopify.formatMoney(variant.price, "<span>{{ shop.money_format }}</span>") + " <s>" + Shopify.formatMoney(variant.compare_at_price, "{{ shop.money_format }}") + "</s>");
-      }else{
-        jQuery('#product-price').html(Shopify.formatMoney(variant.price, "{{ shop.money_format }}"));
-      }
-    }else{
-      jQuery('#product-price').empty();
-      jQuery('#add-to-cart').prop('disabled', true).text('ADD TO CART');
-      {% if product.price_varies %}
-        jQuery('#product-price').html('{{ product.price_min | money }} – {{ product.price_max | money }}' );
-      {% else %}
-        jQuery('#product-price').html('{{ product.price | money }}');
-      {% endif %}
-    }
-  };
+  // var selectCallback = function(variant, selector){
+  //   if(variant){
+  //     if(variant.available){
+  //       jQuery('#add-to-cart').prop('disabled', false).text('ADD TO CART');
+  //     }else{
+  //       jQuery('#add-to-cart').prop('disabled', true).text('SOLD OUT');
+  //     }
+  //     if( variant.compare_at_price > variant.price ) {
+  //       {% if variant.price < variant.compare_at_price %} {{ variant.compare_at_price | money }}{% endif %}
+  //       jQuery('#product-price').html(Shopify.formatMoney(variant.price, "<span>{{ shop.money_format }}</span>") + " <s>" + Shopify.formatMoney(variant.compare_at_price, "{{ shop.money_format }}") + "</s>");
+  //     }else{
+  //       jQuery('#product-price').html(Shopify.formatMoney(variant.price, "{{ shop.money_format }}"));
+  //     }
+  //   }else{
+  //     jQuery('#product-price').empty();
+  //     jQuery('#add-to-cart').prop('disabled', true).text('ADD TO CART');
+  //     {% if product.price_varies %}
+  //       jQuery('#product-price').html('{{ product.price_min | money }} – {{ product.price_max | money }}' );
+  //     {% else %}
+  //       jQuery('#product-price').html('{{ product.price | money }}');
+  //     {% endif %}
+  //   }
+  // };
   // //Replace default variant selector
   // jQuery(function($) {
   //   new Shopify.OptionSelectors('product-select', {
