--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -8,7 +8,11 @@
           {%- endif -%}>
               <div id="bag">
                 <!--Variations Dropdown-->
-      
+                <select id="product-select" name="id">
+                  {% for variant in product.variants %}
+                  {% endfor %}
+                </select>
+
                 <!--Actions-->
                   {% if product.available %}
                       <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
