--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -10,6 +10,7 @@
                 <!--Variations Dropdown-->
                 <select id="product-select" name="id">
                   {% for variant in product.variants %}
+                  <option value="{{ variant.id }}">{{ variant.title | upcase }}</option>
                   {% endfor %}
                 </select>
 
