--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -7,25 +7,23 @@
           class="product-variants"
           {%- endif -%}>
               <div id="bag">
-
                 <!--Variations Dropdown-->
                 <select id="product-select" name="id">
                   {% for variant in product.variants %}
                   <option value="{{ variant.id }}">{{ variant.title | upcase }}</option>
                   {% endfor %}
                 </select>
-
                 <!--Actions-->
-                  {% if product.available %}
+                {% if product.available %}
                       <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
                   {% else %}
                     <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
                   {% endif %}
-                  <button
+                <button
                          type="submit"
                          name="add"
                          data-add-to-cart
-                         class="js-go-cart-add-to-cart"
+                         class="js-go-cart-add-to-cart addtocart hov"
                          {%- unless current_variant.available -%}disabled="disabled"{%- endunless -%}>
                         	 <span data-add-to-cart-text>
                         	    {%- if current_variant.available -%}
