--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -56,7 +56,7 @@
                 <div>Calculated at checkout</div>
               </div>
             </div>
-            <div class="active" style="grid-column:span 2">
+            <div class="active" style="grid-column:span 2; padding:2px;">
             <input id="update-cart" type="submit" name="update" value="Update cart" style="display: none" />
             <button id="checkout" type="submit" name="checkout">PROCEED TO CHECKOUT</button>
           </div>
