--- a/assets/style.css
+++ b/assets/style.css
@@ -266,7 +266,7 @@ a{
 }
 
 #products.dropped .product .info-product>div:nth-child(odd) {
-  border-right: 0.5px solid var(--black);
+  border-left: 0.5px solid var(--black);
 }
 
 #products.dropped .info-product {
@@ -279,10 +279,7 @@ a{
 }
 
 #products.dropped .info-product>div:nth-child(odd) {
-  border-right: 0.5px solid transparent;
-  grid-column: span 2;
-  padding: 2px 2px 2px 5px;
-  display: grid;
+  border-left: 0.5px solid transparent;
 }
 
 .product.active-size,
@@ -527,7 +524,7 @@ header{
 }
 
 .product:hover .info-product>div:nth-child(odd) {
-  border-right: 0.5px solid var(--black);
+  border-left: 0.5px solid var(--black);
 }
 
 .product:hover span.box {
@@ -570,10 +567,10 @@ span.box {
   grid-column: span 1;
   padding-left: 5px;
   display: grid;
+  border-right: 0.5px solid transparent;
 }
 
-.info-product>div:nth-child(odd) {
-  border-right: 0.5px solid transparent;
+.info-product>div:nth-child(even) {
   padding: 2px;
   grid-column: span 3;
   padding-left: 5px;
