--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -105,6 +105,9 @@
     {% include 'related' %}
 </div>
 <style>
+  .thumb {
+    grid-column: auto!important;
+  }
   .switch-view{
     display: none;
   }
