--- a/assets/style.css
+++ b/assets/style.css
@@ -524,7 +524,7 @@ header{
 }
 
 .product:hover .info-product>div:nth-child(odd) {
-  border-left: 0.5px solid var(--black);
+  border-right:0.5px solid var(--black);
 }
 
 .product:hover span.box {
