--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -29,11 +29,11 @@
         <div class="go-cart-modal__content js-go-cart-modal-content">
           <div class="info-product">
             <div>Designer</div>
-            <div>{{ product.metafields.custom.designer }}</div>
+            <div>{{ item.product.metafields.custom.designer }}</div>
           </div>
           <div class="info-product">
             <div>Era</div>
-            <div>{{ product.metafields.custom.era }}</div>
+            <div>{{ item.product.metafields.custom.era }}</div>
           </div>
         </div>
         <div class="go-cart-modal__buttons">
