--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -68,33 +68,36 @@
       {% endif %}
 
 <style>
-    .main-information {
-        border-top: 0.5px solid var(--black);
-        border-right: 0.5px solid var(--black);
-        border-left: 0.5px solid var(--black);
-        row-gap: 0px!important;
-        grid-template-columns: repeat(1,1fr);
-        display: grid;
-        grid-gap: 12px;
-        grid-column: span 4;
-    }
-    .info-product {
-    border-bottom: 0.5px solid var(--black);
-    grid-column: span 1;
-    row-gap: 0px!important;
-    grid-template-columns: repeat(4,1fr);
-    display: grid;
-    grid-gap: 12px;
+body{
+  background-color: var(--black);
+  color: var(--white);
+}
+.main-information {
+  border-top: 0.5px solid var(--black);
+  border-right: 0.5px solid var(--black);
+  border-left: 0.5px solid var(--black);
+  row-gap: 0px!important;
+  grid-template-columns: repeat(1,1fr);
+  display: grid;
+  grid-gap: 12px;
+  grid-column: span 4;
+}
+.info-product {
+  border-bottom: 0.5px solid var(--black);
+  grid-column: span 1;
+  row-gap: 0px!important;
+  grid-template-columns: repeat(4,1fr);
+  display: grid;
+  grid-gap: 12px;
 }
 .info-product>div:nth-child(even) {
-    grid-column: span 3;
-    padding: 2px 2px 2px 5px;
-    display: grid;
+  grid-column: span 3;
+  padding: 2px 2px 2px 5px;
+  display: grid;
 }
 .info-product>div:nth-child(odd) {
-    border-right: 0.5px solid var(--black);
-    grid-column: span 1;
+  border-right: 0.5px solid var(--black);
+  grid-column: span 1;
 }
-
 
 </style>
