--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -73,9 +73,9 @@ body{
   color: var(--white);
 }
 .main-information {
-  border-top: 0.5px solid var(--white);
-  border-right: 0.5px solid var(--white);
-  border-left: 0.5px solid var(--white);
+  border-top: 0.5px solid var(--white)!important;
+  border-right: 0.5px solid var(--white)!important;;
+  border-left: 0.5px solid var(--white)!important;;
   row-gap: 0px!important;
   grid-template-columns: repeat(1,1fr);
   display: grid;
@@ -83,7 +83,7 @@ body{
   grid-column: span 4;
 }
 .info-product {
-  border-bottom: 0.5px solid var(--white);
+  border-bottom: 0.5px solid var(--white)!important;;
   grid-column: span 1;
   row-gap: 0px!important;
   grid-template-columns: repeat(4,1fr);
@@ -96,7 +96,7 @@ body{
   display: grid;
 }
 .info-product>div:nth-child(odd) {
-  border-right: 0.5px solid var(--white);
+  border-right: 0.5px solid var(--white)!important;;
   grid-column: span 1;
 }
 
