--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -70,12 +70,12 @@
 <style>
 body{
   background-color: var(--black);
-  color: var(--white);
+  color:var(--white);
 }
 .main-information {
-  border-top: 0.5px solid var(--white)!important;
-  border-right: 0.5px solid var(--white)!important;;
-  border-left: 0.5px solid var(--white)!important;;
+  border-top: 0.5px solid var(--black);
+  border-right: 0.5px solid var(--black);
+  border-left: 0.5px solid var(--black);
   row-gap: 0px!important;
   grid-template-columns: repeat(1,1fr);
   display: grid;
@@ -83,7 +83,7 @@ body{
   grid-column: span 4;
 }
 .info-product {
-  border-bottom: 0.5px solid var(--white)!important;;
+  border-bottom: 0.5px solid var(--black);
   grid-column: span 1;
   row-gap: 0px!important;
   grid-template-columns: repeat(4,1fr);
@@ -96,7 +96,7 @@ body{
   display: grid;
 }
 .info-product>div:nth-child(odd) {
-  border-right: 0.5px solid var(--white)!important;;
+  border-right: 0.5px solid var(--black);
   grid-column: span 1;
 }
 
