--- a/assets/style.css
+++ b/assets/style.css
@@ -557,6 +557,7 @@ span.box {
   row-gap:0px!important;
   grid-template-columns: repeat(4,1fr);
   display: grid;
+  grid-column: 12px;
 }
 
 .info-product>div:nth-child(odd) {
@@ -573,6 +574,7 @@ span.box {
   grid-column: span 3;
   padding-left: 5px;
   display: grid;
+  margin-left: -12px;
 }
 
 .thumbnail{
