--- a/assets/style.css
+++ b/assets/style.css
@@ -557,7 +557,7 @@ span.box {
   row-gap:0px!important;
   grid-template-columns: repeat(4,1fr);
   display: grid;
-  grid-column: 12px;
+  grid-gap: 12px;
 }
 
 .info-product>div:nth-child(odd) {
