--- a/assets/style.css
+++ b/assets/style.css
@@ -557,7 +557,7 @@ span.box {
   row-gap:0px!important;
   grid-template-columns: repeat(4,1fr);
   display: grid;
-  
+
   grid-gap: 12px;
 }
 
@@ -576,6 +576,11 @@ span.box {
   padding-left: 5px;
   display: grid;
   margin-left: -12px;
+}
+.remove{
+  position: absolute;
+  top: 0;
+  padding: 2px;
 }
 
 .thumbnail{
