--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -8,7 +8,7 @@
               </div>
               <div class="info_cart">
                 <div class="main-information">
-                  
+
                   <div class="info-product">
                     <div>Designer</div>
                     <div>{{ item.product.metafields.custom.designer }}</div>
@@ -41,8 +41,8 @@
                       </div>
                   </div>
 
-                  <div class="info-product">
-                    <div><a href="/cart/change?line={{ forloop.index }}&quantity=0">Remove</a></div>
+                  <div class="remove">
+                    <a href="/cart/change?line={{ forloop.index }}&quantity=0">Remove</a>
                   </div>
             </div>
             </div>
