--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -51,11 +51,11 @@
           <div class="total">
             <div class="main-information">
               <div class="info-product">
-                <div>SUBTOTAL</div>
+                <div>Subtotal</div>
                 <div>{{ cart.total_price | money }}</div>
               </div>
               <div class="info-product">
-                <div>SHIPPING</div>
+                <div>Shipping</div>
                 <div>Calculated at checkout</div>
               </div>
             </div>
