--- a/assets/style.css
+++ b/assets/style.css
@@ -578,9 +578,12 @@ span.box {
   margin-left: -12px;
 }
 .remove{
+  right: 5px;
   position: absolute;
   top: 0;
+  padding-left: 5px!important;
   padding: 2px;
+  border-left: 0.5px solid;
 }
 
 .thumbnail{
@@ -930,9 +933,6 @@ footer{
   text-align: center;
   cursor:pointer;
   background:#DEDED9;
-}
-.quantity-wrap{
-  background:white;
 }
 .item-quantity {
   align-self: end;
