--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -71,9 +71,8 @@
       {% endif %}
 
 <style>
-body{
-}
 .main-information {
+  position: relative;
   border-top: 0.5px solid var(--black);
   border-right: 0.5px solid var(--black);
   border-left: 0.5px solid var(--black);
