--- a/assets/style.css
+++ b/assets/style.css
@@ -924,6 +924,7 @@ footer{
   grid-column:span 3;
 }
 #checkout{
+  margin-top: 24px;
   grid-column:span 2;
   width:100%;
   background:var(--black);
