--- a/assets/style.css
+++ b/assets/style.css
@@ -578,11 +578,10 @@ span.box {
   margin-left: -12px;
 }
 .remove{
-  right: 5px;
+  right: 0px;
   position: absolute;
   top: 0;
-  padding-left: 5px!important;
-  padding: 2px;
+  padding: 2px 5px 2px 5px!important;
   border-left: 0.5px solid;
 }
 
